samples/_failures_safe/1761218407_46fcec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfc80558.c: In function ‘main’:
./samples/SAFE/__tmp_bfc80558.c:148:13: error: expected expression at end of input
  148 |             if (user_input[i] != '0' && user_input[i] != '1')
      |             ^~
./samples/SAFE/__tmp_bfc80558.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bfc80558.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bfc80558.c:148:13: error: expected declaration or statement at end of input
